v0.14
    * FIX : Use application-wide proxy (fixes #1763)
    * ADD : Allow to specify a user/password for the proxy (untested by me)
    * FIX : Photo localization patch from Toby Speight.
	* FIX : Set version of newly uploaded objects at 1.
	* FIX : Graphical corruption on Intel chipsets when "Show downloaded areas" was enabled
	* FIX : API 0.6: Add features version number in MDC'es
	* FIX : API 0.6: Fix info dock links
	* FIX : Problem with "center" & "center & zoom" from the properties dock
	* FIX : API 0.6: Error when deleting a road with no nodes (fixes #1732)
    * FIX : Correctly handle plural forms in MapLayer information
    * FIX : API 0.6: Do not add "created_by" to changed features (fixes #1728)
    * FIX : API 0.6: Allow to define a comment on a changeset (fixes #1731)
    * FIX : API 0.6 fixes
    * FIX : Nodes fetched by relations are incomplete and not completed by "download more" (fixes #1715)
	* ADD : Initial support for Symbian S60v5
    * ADD : Support for discardable dialogs/messageboxes (fixes #1487)
    * FIX : Do not automerge GPX nodes (fixes #1486)
    * FIX : Proper clipping via Boost's geometry template library
	* FIX : Do not use guarded pointers (too slow) (closes #1674)
	* FIX : Styles tag selection speed optimisation (by Trav)
	* FIX : OSM/GPX import optimisations (by Trav)
    * FIX : <Esc> in Name property inspector causes AV (fixes #1672)
    * CHG : Move vector background from SHP to OSB
    * CHG : Preferences are uploaded to OSM in binary, base-64 encoded, 254 char slice. Allow to bypass the 255 char per preference limitation.
    * CHG : Preferences lists (Bookmarks, WMS servers, ...) are now distributed and saved as XML in ~/.merkaartor. Allow proper merging (fixes #1401)
    * ADD : Allow to choose which Qt style to use via a combobox
    * CHG : Implement the custom styles as plugins
	* FIX : English language warning
	* ADD : Switch to template-based projection handling; remove dependency on libproj